Fix a11y issues in high contrast mode:   - color swatches not visible   - focus border not visible on FF
Refs #10561.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@21745 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -952,9 +952,13 @@ img.dijitColorPaletteUnder {
 
 
 .dijit_a11y .dijitColorPalette .dijitPaletteTable,
-.dijit_a11y .dijitColorPalette .dijitPaletteCell,
-.dijit_a11y .dijitColorPalette .dijitPaletteImg {
+.dijit_a11y .dijitColorPalette .dijitPaletteTable * {
+	/* table cells are to catch events, but the swatches are in the PaletteImg behind the table */
 	background-color: transparent !important;
+}
+.dj_gecko .dijit_a11y .dijitColorPalette .dijitPaletteCellFocused .dijitPaletteImg {
+	border: 3px dotted #000;	/* focus border on table cells broken in FF high contrast :-( */
+	margin: -1px;
 }
 
 /* AccordionContainer */
